@@ -2,10 +2,13 @@ package io.quarkus.qute.deployment;
 
 import static io.quarkus.deployment.annotations.ExecutionTime.STATIC_INIT;
 import static java.util.stream.Collectors.toMap;
+import static org.jboss.jandex.gizmo2.Jandex2Gizmo.classDescOf;
+import static org.jboss.jandex.gizmo2.Jandex2Gizmo.methodDescOf;
 
 import java.io.File;
 import java.io.IOException;
 import java.io.UncheckedIOException;
+import java.lang.constant.ClassDesc;
 import java.lang.reflect.Modifier;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -56,8 +59,9 @@ import io.quarkus.arc.processor.BeanInfo;
 import io.quarkus.arc.processor.BuiltinScope;
 import io.quarkus.arc.processor.DotNames;
 import io.quarkus.deployment.ApplicationArchive;
+import io.quarkus.deployment.GeneratedClassGizmo2Adaptor;
 import io.quarkus.deployment.GeneratedClassGizmoAdaptor;
-import io.quarkus.deployment.IsNormal;
+import io.quarkus.deployment.IsProduction;
 import io.quarkus.deployment.annotations.BuildProducer;
 import io.quarkus.deployment.annotations.BuildStep;
 import io.quarkus.deployment.annotations.Record;
@@ -66,20 +70,18 @@ import io.quarkus.deployment.builditem.GeneratedClassBuildItem;
 import io.quarkus.deployment.builditem.GeneratedResourceBuildItem;
 import io.quarkus.deployment.builditem.HotDeploymentWatchedFileBuildItem;
 import io.quarkus.deployment.pkg.builditem.BuildSystemTargetBuildItem;
-import io.quarkus.gizmo.AssignableResultHandle;
-import io.quarkus.gizmo.BranchResult;
-import io.quarkus.gizmo.BytecodeCreator;
-import io.quarkus.gizmo.CatchBlockCreator;
-import io.quarkus.gizmo.ClassCreator;
-import io.quarkus.gizmo.ClassCreator.Builder;
-import io.quarkus.gizmo.ClassOutput;
-import io.quarkus.gizmo.DescriptorUtils;
-import io.quarkus.gizmo.FunctionCreator;
-import io.quarkus.gizmo.Gizmo;
-import io.quarkus.gizmo.MethodCreator;
-import io.quarkus.gizmo.MethodDescriptor;
-import io.quarkus.gizmo.ResultHandle;
-import io.quarkus.gizmo.TryBlock;
+import io.quarkus.gizmo2.ClassOutput;
+import io.quarkus.gizmo2.Const;
+import io.quarkus.gizmo2.Expr;
+import io.quarkus.gizmo2.Gizmo;
+import io.quarkus.gizmo2.LocalVar;
+import io.quarkus.gizmo2.ParamVar;
+import io.quarkus.gizmo2.Var;
+import io.quarkus.gizmo2.creator.BlockCreator;
+import io.quarkus.gizmo2.creator.ClassCreator;
+import io.quarkus.gizmo2.desc.ClassMethodDesc;
+import io.quarkus.gizmo2.desc.ConstructorDesc;
+import io.quarkus.gizmo2.desc.MethodDesc;
 import io.quarkus.qute.EvalContext;
 import io.quarkus.qute.EvaluatedParams;
 import io.quarkus.qute.Expression;
@@ -125,7 +127,9 @@ public class MessageBundleProcessor {
     @BuildStep
     List<MessageBundleBuildItem> processBundles(BeanArchiveIndexBuildItem beanArchiveIndex,
             ApplicationArchivesBuildItem applicationArchivesBuildItem,
-            BuildProducer<GeneratedClassBuildItem> generatedClasses, BeanRegistrationPhaseBuildItem beanRegistration,
+            BuildProducer<GeneratedClassBuildItem> generatedClasses,
+            BuildProducer<GeneratedResourceBuildItem> generatedResources,
+            BeanRegistrationPhaseBuildItem beanRegistration,
             BuildProducer<BeanConfiguratorBuildItem> configurators,
             BuildProducer<MessageBundleMethodBuildItem> messageTemplateMethods,
             BuildProducer<HotDeploymentWatchedFileBuildItem> watchedFiles,
@@ -135,7 +139,8 @@ public class MessageBundleProcessor {
         Map<String, ClassInfo> found = new HashMap<>();
         List<MessageBundleBuildItem> bundles = new ArrayList<>();
         List<DotName> localizedInterfaces = new ArrayList<>();
-        List<Path> messageFiles = findMessageFiles(applicationArchivesBuildItem, watchedFiles);
+        // Message files sorted by priority
+        List<MessageFile> messageFiles = findMessageFiles(applicationArchivesBuildItem, watchedFiles);
 
         // First collect all interfaces annotated with @MessageBundle
         for (AnnotationInstance bundleAnnotation : index.getAnnotations(Names.BUNDLE)) {
@@ -183,10 +188,8 @@ public class MessageBundleProcessor {
                     // Find localizations for each interface
                     String defaultLocale = getDefaultLocale(bundleAnnotation, locales);
                     List<ClassInfo> localized = new ArrayList<>();
-                    for (ClassInfo implementor : index.getKnownDirectImplementors(bundleClass.name())) {
-                        if (Modifier.isInterface(implementor.flags())) {
-                            localized.add(implementor);
-                        }
+                    for (ClassInfo implementor : index.getKnownDirectSubinterfaces(bundleClass.name())) {
+                        localized.add(implementor);
                     }
                     Map<String, ClassInfo> localeToInterface = new HashMap<>();
                     for (ClassInfo localizedInterface : localized) {
@@ -207,48 +210,40 @@ public class MessageBundleProcessor {
                     }
 
                     // Find localized files
-                    Map<String, Path> localeToFile = new HashMap<>();
+                    Map<String, List<MessageFile>> localeToFiles = new HashMap<>();
                     // Message templates not specified by a localized interface are looked up in a localized file (merge candidate)
-                    Map<String, Path> localeToMergeCandidate = new HashMap<>();
-                    for (Path messageFile : messageFiles) {
-                        String fileName = messageFile.getFileName().toString();
-                        if (bundleNameMatchesFileName(fileName, name)) {
-                            final String locale;
-                            int postfixIdx = fileName.indexOf('.');
-                            if (postfixIdx == name.length()) {
-
-                                // msg.txt -> use bundle default locale
+                    Map<String, List<MessageFile>> localeToMergeCandidates = new HashMap<>();
+                    for (MessageFile messageFile : messageFiles) {
+                        if (messageFile.matchesBundle(name)) {
+                            String locale = messageFile.getLocale(name);
+                            if (locale == null) {
                                 locale = defaultLocale;
-                            } else {
-
-                                locale = fileName
-                                        // msg_en.txt -> en
-                                        // msg_Views_Index_cs.properties -> cs
-                                        // msg_Views_Index_cs-CZ.properties -> cs-CZ
-                                        // msg_Views_Index_cs_CZ.properties -> cs_CZ
-                                        .substring(name.length() + 1, postfixIdx)
-                                        // Support resource bundle naming convention
-                                        .replace('_', '-');
                             }
-
                             ClassInfo localizedInterface = localeToInterface.get(locale);
+                            List<MessageFile> files;
                             if (defaultLocale.equals(locale) || localizedInterface != null) {
-                                // both file and interface exist for one locale, therefore we need to merge them
-                                Path previous = localeToMergeCandidate.put(locale, messageFile);
-                                if (previous != null) {
-                                    throw new MessageBundleException(
-                                            String.format(
-                                                    "Cannot register [%s] - a localized file already exists for locale [%s]: [%s]",
-                                                    fileName, locale, previous.getFileName().toString()));
+                                files = localeToMergeCandidates.get(locale);
+                                if (files == null) {
+                                    files = new ArrayList<>();
+                                    localeToMergeCandidates.put(locale, files);
                                 }
                             } else {
-                                localeToFile.put(locale, messageFile);
+                                files = localeToFiles.get(locale);
+                                if (files == null) {
+                                    files = new ArrayList<>();
+                                    localeToFiles.put(locale, files);
+                                }
                             }
+                            files.add(messageFile);
                         }
                     }
 
+                    // Check for duplicates again
+                    checkForDuplicates(localeToMergeCandidates);
+                    checkForDuplicates(localeToFiles);
+
                     bundles.add(new MessageBundleBuildItem(name, bundleClass, localeToInterface,
-                            localeToFile, localeToMergeCandidate, defaultLocale));
+                            localeToFiles, localeToMergeCandidates, defaultLocale));
                 } else {
                     throw new MessageBundleException("@MessageBundle must be declared on an interface: " + bundleClass);
                 }
@@ -272,22 +267,24 @@ public class MessageBundleProcessor {
 
         // Generate implementations
         // name -> impl class
-        Map<String, String> generatedImplementations = generateImplementations(bundles, generatedClasses,
+        Map<String, ClassDesc> generatedImplementations = generateImplementations(bundles, generatedClasses, generatedResources,
                 messageTemplateMethods, index);
 
         // Register synthetic beans
         for (MessageBundleBuildItem bundle : bundles) {
             ClassInfo bundleInterface = bundle.getDefaultBundleInterface();
-            beanRegistration.getContext().configure(bundleInterface.name()).addType(bundle.getDefaultBundleInterface().name())
+            beanRegistration.getContext().configure(bundleInterface.name())
+                    .addType(bundle.getDefaultBundleInterface().name())
                     // The default message bundle - add both @Default and @Localized
                     .addQualifier(DotNames.DEFAULT).addQualifier().annotation(Names.LOCALIZED)
                     .addValue("value", getDefaultLocale(bundleInterface.declaredAnnotation(Names.BUNDLE), locales)).done()
                     .unremovable()
-                    .scope(Singleton.class).creator(mc -> {
+                    .scope(Singleton.class)
+                    .creator(cg -> {
+                        BlockCreator bc = cg.createMethod();
                         // Just create a new instance of the generated class
-                        mc.returnValue(
-                                mc.newInstance(MethodDescriptor
-                                        .ofConstructor(generatedImplementations.get(bundleInterface.name().toString()))));
+                        bc.return_(bc.new_(ConstructorDesc.of(
+                                generatedImplementations.get(bundleInterface.name().toString()))));
                     }).done();
 
             // Localized interfaces
@@ -296,54 +293,31 @@ public class MessageBundleProcessor {
                         .addType(bundle.getDefaultBundleInterface().name())
                         .addQualifier(localizedInterface.declaredAnnotation(Names.LOCALIZED))
                         .unremovable()
-                        .scope(Singleton.class).creator(mc -> {
+                        .scope(Singleton.class)
+                        .creator(cg -> {
+                            BlockCreator bc = cg.createMethod();
                             // Just create a new instance of the generated class
-                            mc.returnValue(
-                                    mc.newInstance(MethodDescriptor.ofConstructor(
-                                            generatedImplementations.get(localizedInterface.name().toString()))));
+                            bc.return_(bc.new_(ConstructorDesc.of(
+                                    generatedImplementations.get(localizedInterface.name().toString()))));
                         }).done();
             }
             // Localized files
-            for (Entry<String, Path> entry : bundle.getLocalizedFiles().entrySet()) {
+            for (Entry<String, List<MessageFile>> entry : bundle.getLocalizedFiles().entrySet()) {
                 beanRegistration.getContext().configure(bundle.getDefaultBundleInterface().name())
                         .addType(bundle.getDefaultBundleInterface().name())
                         .addQualifier().annotation(Names.LOCALIZED)
                         .addValue("value", entry.getKey()).done()
                         .unremovable()
-                        .scope(Singleton.class).creator(mc -> {
+                        .scope(Singleton.class).creator(cg -> {
+                            BlockCreator bc = cg.createMethod();
                             // Just create a new instance of the generated class
-                            mc.returnValue(
-                                    mc.newInstance(MethodDescriptor
-                                            .ofConstructor(generatedImplementations.get(entry.getValue().toString()))));
+                            bc.return_(bc.new_(ConstructorDesc.of(
+                                    generatedImplementations.get(entry.getValue().get(0).fileName()))));
                         }).done();
             }
         }
 
         return bundles;
-    }
-
-    static boolean bundleNameMatchesFileName(String fileName, String name) {
-        int fileSeparatorIdx = fileName.indexOf('.');
-        // Remove file extension if exists
-        if (fileSeparatorIdx > -1) {
-            fileName = fileName.substring(0, fileSeparatorIdx);
-        }
-        // Split the filename and the bundle name by underscores
-        String[] fileNameParts = fileName.split("_");
-        String[] nameParts = name.split("_");
-
-        if (fileNameParts.length < nameParts.length) {
-            return false;
-        }
-
-        // Compare each part of the filename with the corresponding part of the bundle name
-        for (int i = 0; i < nameParts.length; i++) {
-            if (!fileNameParts[i].equals(nameParts[i])) {
-                return false;
-            }
-        }
-
-        return true;
     }
 
     @Record(value = STATIC_INIT)
@@ -678,7 +652,7 @@ public class MessageBundleProcessor {
         }
     }
 
-    @BuildStep(onlyIf = IsNormal.class)
+    @BuildStep(onlyIf = IsProduction.class)
     void generateExamplePropertiesFiles(List<MessageBundleMethodBuildItem> messageBundleMethods,
             BuildSystemTargetBuildItem target, BuildProducer<GeneratedResourceBuildItem> dummy) throws IOException {
         if (messageBundleMethods.isEmpty()) {
@@ -721,14 +695,16 @@ public class MessageBundleProcessor {
         }
     }
 
-    private Map<String, String> generateImplementations(List<MessageBundleBuildItem> bundles,
+    private Map<String, ClassDesc> generateImplementations(List<MessageBundleBuildItem> bundles,
             BuildProducer<GeneratedClassBuildItem> generatedClasses,
+            BuildProducer<GeneratedResourceBuildItem> generatedResources,
             BuildProducer<MessageBundleMethodBuildItem> messageTemplateMethods,
             IndexView index) throws IOException {
 
-        Map<String, String> generatedTypes = new HashMap<>();
+        Map<String, ClassDesc> generatedTypes = new HashMap<>();
 
-        ClassOutput defaultClassOutput = new GeneratedClassGizmoAdaptor(generatedClasses, new AppClassPredicate());
+        ClassOutput defaultClassOutput = new GeneratedClassGizmo2Adaptor(generatedClasses, generatedResources,
+                new AppClassPredicate());
 
         for (MessageBundleBuildItem bundle : bundles) {
             ClassInfo bundleInterface = bundle.getDefaultBundleInterface();
@@ -741,7 +717,7 @@ public class MessageBundleProcessor {
             // Generate implementation for the default bundle interface
             String bundleImpl = generateImplementation(bundle, null, null, bundleInterfaceWrapper,
                     defaultClassOutput, messageTemplateMethods, defaultKeyToMap, null, index);
-            generatedTypes.put(bundleInterface.name().toString(), bundleImpl);
+            generatedTypes.put(bundleInterface.name().toString(), ClassDesc.of(bundleImpl));
 
             // Generate imeplementation for each localized interface
             for (Entry<String, ClassInfo> entry : bundle.getLocalizedInterfaces().entrySet()) {
@@ -754,17 +730,20 @@ public class MessageBundleProcessor {
                         keyToMap);
 
                 generatedTypes.put(entry.getValue().name().toString(),
-                        generateImplementation(bundle, bundleInterface, bundleImpl, localizedInterfaceWrapper,
-                                defaultClassOutput, messageTemplateMethods, keyToMap, null, index));
+                        ClassDesc.of(generateImplementation(bundle, bundleInterface, bundleImpl, localizedInterfaceWrapper,
+                                defaultClassOutput, messageTemplateMethods, keyToMap, null, index)));
             }
 
             // Generate implementation for each localized file
-            for (Entry<String, Path> entry : bundle.getLocalizedFiles().entrySet()) {
-                Path localizedFile = entry.getValue();
-                var keyToTemplate = parseKeyToTemplateFromLocalizedFile(bundleInterface, localizedFile, index);
+            for (Entry<String, List<MessageFile>> entry : bundle.getLocalizedFiles().entrySet()) {
+                List<MessageFile> localizedFiles = entry.getValue();
+                if (localizedFiles.isEmpty()) {
+                    continue;
+                }
+                var keyToTemplate = parseKeyToTemplateFromLocalizedFiles(bundleInterface, localizedFiles, index);
 
                 String locale = entry.getKey();
-                ClassOutput localeAwareGizmoAdaptor = new GeneratedClassGizmoAdaptor(generatedClasses,
+                ClassOutput localeAwareGizmoAdaptor = new GeneratedClassGizmo2Adaptor(generatedClasses, generatedResources,
                         new AppClassPredicate(new Function<String, String>() {
                             @Override
                             public String apply(String className) {
@@ -775,9 +754,10 @@ public class MessageBundleProcessor {
                                 return className;
                             }
                         }));
-                generatedTypes.put(localizedFile.toString(),
-                        generateImplementation(bundle, bundleInterface, bundleImpl, new SimpleClassInfoWrapper(bundleInterface),
-                                localeAwareGizmoAdaptor, messageTemplateMethods, keyToTemplate, locale, index));
+                generatedTypes.put(localizedFiles.get(0).fileName(),
+                        ClassDesc.of(generateImplementation(bundle, bundleInterface, bundleImpl,
+                                new SimpleClassInfoWrapper(bundleInterface), localeAwareGizmoAdaptor, messageTemplateMethods,
+                                keyToTemplate, locale, index)));
             }
         }
         return generatedTypes;
@@ -787,9 +767,9 @@ public class MessageBundleProcessor {
             ClassInfo bundleInterface, String locale, List<MethodInfo> methods, ClassInfo localizedInterface, IndexView index)
             throws IOException {
 
-        Path localizedFile = bundle.getMergeCandidates().get(locale);
-        if (localizedFile != null) {
-            Map<String, String> keyToTemplate = parseKeyToTemplateFromLocalizedFile(bundleInterface, localizedFile, index);
+        List<MessageFile> localizedFiles = bundle.getMergeCandidates().get(locale);
+        if (localizedFiles != null) {
+            Map<String, String> keyToTemplate = parseKeyToTemplateFromLocalizedFiles(bundleInterface, localizedFiles, index);
             if (!keyToTemplate.isEmpty()) {
 
                 // keep message templates if value wasn't provided by Message#value
@@ -819,42 +799,48 @@ public class MessageBundleProcessor {
                 return keyToTemplate;
             }
         }
-        return Collections.emptyMap();
+        return Map.of();
     }
 
-    private Map<String, String> parseKeyToTemplateFromLocalizedFile(ClassInfo bundleInterface,
-            Path localizedFile, IndexView index) throws IOException {
+    private Map<String, String> parseKeyToTemplateFromLocalizedFiles(ClassInfo bundleInterface,
+            List<MessageFile> localizedFile, IndexView index) throws IOException {
         Map<String, String> keyToTemplate = new HashMap<>();
-        for (ListIterator<String> it = Files.readAllLines(localizedFile).listIterator(); it.hasNext();) {
-            String line = it.next();
-            if (line.isBlank()) {
-                // Blank lines are skipped
-                continue;
-            }
-            line = line.strip();
-            if (line.startsWith("#")) {
-                // Comments are skipped
-                continue;
-            }
-            int eqIdx = line.indexOf('=');
-            if (eqIdx == -1) {
-                throw new MessageBundleException(
-                        "Missing key/value separator\n\t- file: " + localizedFile + "\n\t- line " + it.previousIndex());
-            }
-            String key = line.substring(0, eqIdx).strip();
-            if (!hasMessageBundleMethod(bundleInterface, key) && !isEnumConstantMessageKey(key, index, bundleInterface)) {
-                throw new MessageBundleException(
-                        "Message bundle method " + key + "() not found on: " + bundleInterface + "\n\t- file: "
-                                + localizedFile + "\n\t- line " + it.previousIndex());
-            }
-            String value = adaptLine(line.substring(eqIdx + 1, line.length()));
-            if (value.endsWith("\\")) {
-                // The logical line is spread out across several normal lines
-                StringBuilder builder = new StringBuilder(value.substring(0, value.length() - 1));
-                constructLine(builder, it);
-                keyToTemplate.put(key, builder.toString());
-            } else {
-                keyToTemplate.put(key, value);
+        for (MessageFile messageFile : localizedFile) {
+            for (ListIterator<String> it = Files.readAllLines(messageFile.path()).listIterator(); it.hasNext();) {
+                String line = it.next();
+                if (line.isBlank()) {
+                    // Blank lines are skipped
+                    continue;
+                }
+                line = line.strip();
+                if (line.startsWith("#")) {
+                    // Comments are skipped
+                    continue;
+                }
+                int eqIdx = line.indexOf('=');
+                if (eqIdx == -1) {
+                    throw new MessageBundleException(
+                            "Missing key/value separator\n\t- file: " + localizedFile + "\n\t- line " + it.previousIndex());
+                }
+                String key = line.substring(0, eqIdx).strip();
+                if (keyToTemplate.containsKey(key)) {
+                    // Message template with higher priority takes precedence
+                    continue;
+                }
+                if (!hasMessageBundleMethod(bundleInterface, key) && !isEnumConstantMessageKey(key, index, bundleInterface)) {
+                    throw new MessageBundleException(
+                            "Message bundle method " + key + "() not found on: " + bundleInterface + "\n\t- file: "
+                                    + localizedFile + "\n\t- line " + it.previousIndex());
+                }
+                String value = adaptLine(line.substring(eqIdx + 1, line.length()));
+                if (value.endsWith("\\")) {
+                    // The logical line is spread out across several normal lines
+                    StringBuilder builder = new StringBuilder(value.substring(0, value.length() - 1));
+                    constructLine(builder, it);
+                    keyToTemplate.put(key, builder.toString());
+                } else {
+                    keyToTemplate.put(key, value);
+                }
             }
         }
         return keyToTemplate;
@@ -952,196 +938,211 @@ public class MessageBundleProcessor {
         if (locale != null) {
             baseName = baseName + "_" + locale;
         }
+        String generatedClassName = bundleInterface.name()
+                + (locale != null ? "_" + locale : "")
+                + SUFFIX;
+        String resolveMethodPrefix = baseName + SUFFIX;
 
-        String targetPackage = DotNames.internalPackageNameWithTrailingSlash(bundleInterface.name());
-        String generatedName = targetPackage + baseName + SUFFIX;
-
-        // MyMessages_Bundle implements MyMessages, Resolver
-        Builder builder = ClassCreator.builder().classOutput(classOutput).className(generatedName)
-                .interfaces(bundleInterface.name().toString(), Resolver.class.getName());
-        if (defaultBundleImpl != null) {
-            builder.superClass(defaultBundleImpl);
-        }
-        ClassCreator bundleCreator = builder.build();
-
-        // key -> method
-        Map<String, MessageMethod> keyMap = new LinkedHashMap<>();
-        List<MethodInfo> methods = new ArrayList<>(bundleInterfaceWrapper.methods());
-        // Sort methods
-        methods.sort(Comparator.comparing(MethodInfo::name).thenComparing(Comparator.comparing(MethodInfo::toString)));
-
-        for (MethodInfo method : methods) {
-            if (!method.returnType().name().equals(DotNames.STRING)) {
-                throw new MessageBundleException(
-                        String.format("A message bundle method must return java.lang.String: %s#%s",
-                                bundleInterface, method.name()));
+        Gizmo gizmo = Gizmo.create(classOutput)
+                .withDebugInfo(false)
+                .withParameters(false);
+        gizmo.class_(generatedClassName, cc -> {
+            // MyMessages_Bundle implements MyMessages, Resolver
+            cc.implements_(classDescOf(bundleInterface));
+            cc.implements_(Resolver.class);
+            if (defaultBundleImpl != null) {
+                cc.extends_(ClassDesc.of(defaultBundleImpl));
             }
-            LOG.debugf("Found message bundle method %s on %s", method, bundleInterface);
+            cc.defaultConstructor();
 
-            MethodCreator bundleMethod = bundleCreator.getMethodCreator(MethodDescriptor.of(method));
+            // key -> method
+            Map<String, MessageMethod> keyMap = new LinkedHashMap<>();
+            List<MethodInfo> methods = new ArrayList<>(bundleInterfaceWrapper.methods());
+            // Sort methods
+            methods.sort(Comparator.comparing(MethodInfo::name).thenComparing(Comparator.comparing(MethodInfo::toString)));
 
-            AnnotationInstance messageAnnotation;
-            if (defaultBundleInterface != null) {
-                MethodInfo defaultBundleMethod = bundleInterfaceWrapper.method(method.name(),
-                        method.parameterTypes().toArray(new Type[] {}));
-                if (defaultBundleMethod == null) {
-                    throw new MessageBundleException(
-                            String.format("Default bundle method not found on %s: %s", bundleInterface, method));
-                }
-                messageAnnotation = defaultBundleMethod.annotation(Names.MESSAGE);
-            } else {
-                messageAnnotation = method.annotation(Names.MESSAGE);
-            }
+            for (MethodInfo method : methods) {
+                cc.method(methodDescOf(method), mc -> {
+                    List<ParamVar> params = new ArrayList<>(method.parametersCount());
+                    for (int i = 0; i < method.parametersCount(); i++) {
+                        String paramName = method.parameterName(i);
+                        params.add(mc.parameter(paramName != null ? paramName : "arg" + i, i));
+                    }
+                    if (!method.returnType().name().equals(DotNames.STRING)) {
+                        throw new MessageBundleException(
+                                String.format("A message bundle method must return java.lang.String: %s#%s",
+                                        bundleInterface, method.name()));
+                    }
+                    LOG.debugf("Found message bundle method %s on %s", method, bundleInterface);
 
-            if (messageAnnotation == null) {
-                LOG.debugf("@Message not declared on %s#%s - using the default key/value", bundleInterface, method);
-                messageAnnotation = AnnotationInstance.builder(Names.MESSAGE).value(Message.DEFAULT_VALUE)
-                        .add("name", Message.DEFAULT_NAME).build();
-            }
-
-            String key = getKey(method, messageAnnotation, defaultKeyValue);
-            if (key.equals(MESSAGE)) {
-                throw new MessageBundleException(String.format(
-                        "A message bundle interface method must not use the key 'message' which is reserved for dynamic lookup; defined for %s#%s()",
-                        bundleInterface, method.name()));
-            }
-            if (keyMap.containsKey(key)) {
-                throw new MessageBundleException(String.format("Duplicate key [%s] found on %s", key, bundleInterface));
-            }
-            keyMap.put(key, new SimpleMessageMethod(method));
-
-            boolean generatedTemplate = false;
-            String messageTemplate = messageTemplates.get(method.name());
-            if (messageTemplate == null) {
-                messageTemplate = getMessageAnnotationValue(messageAnnotation, true);
-            }
-
-            if (messageTemplate == null && defaultBundleInterface != null) {
-                // method is annotated with @Message without value() -> fallback to default locale
-                messageTemplate = getMessageAnnotationValue((defaultBundleInterface.method(method.name(),
-                        method.parameterTypes().toArray(new Type[] {}))).annotation(Names.MESSAGE), true);
-            }
-
-            // We need some special handling for enum message bundle methods
-            // A message bundle method that accepts an enum and has no message template receives a generated template:
-            // {#when enumParamName}
-            //   {#is CONSTANT_1}{msg:myEnum_$CONSTANT_1}
-            //   {#is CONSTANT_2}{msg:myEnum_$CONSTANT_2}
-            //   ...
-            // {/when}
-            // Furthermore, a special message method is generated for each enum constant
-            // These methods are used to handle the {msg:myEnum$CONSTANT_1} and {msg:myEnum$CONSTANT_2}
-            if (messageTemplate == null && method.parametersCount() == 1) {
-                Type paramType = method.parameterType(0);
-                if (paramType.kind() == org.jboss.jandex.Type.Kind.CLASS) {
-                    ClassInfo maybeEnum = index.getClassByName(paramType.name());
-                    if (maybeEnum != null && maybeEnum.isEnum()) {
-                        StringBuilder generatedMessageTemplate = new StringBuilder("{#when ")
-                                .append(getParameterName(method, 0))
-                                .append("}");
-                        Set<String> enumConstants = maybeEnum.fields().stream().filter(FieldInfo::isEnumConstant)
-                                .map(FieldInfo::name).collect(Collectors.toSet());
-                        String separator = enumConstantSeparator(enumConstants);
-                        for (String enumConstant : enumConstants) {
-                            // myEnum_CONSTANT
-                            // myEnum_$CONSTANT_1
-                            // myEnum_$CONSTANT$NEXT
-                            String enumConstantKey = toEnumConstantKey(method.name(), separator, enumConstant);
-                            String enumConstantTemplate = messageTemplates.get(enumConstantKey);
-                            if (enumConstantTemplate == null) {
-                                throw new TemplateException(
-                                        String.format("Enum constant message not found in bundle [%s] for key: %s",
-                                                bundleName + (locale != null ? "_" + locale : ""), enumConstantKey));
-                            }
-                            generatedMessageTemplate.append("{#is ")
-                                    .append(enumConstant)
-                                    .append("}{")
-                                    .append(bundle.getName())
-                                    .append(":")
-                                    .append(enumConstantKey)
-                                    .append("}");
-                            // For each constant we generate a method:
-                            // myEnum_CONSTANT(MyEnum val)
-                            // myEnum_$CONSTANT_1(MyEnum val)
-                            // myEnum_$CONSTANT$NEXT(MyEnum val)
-                            generateEnumConstantMessageMethod(bundleCreator, bundleName, locale, bundleInterface,
-                                    defaultBundleInterface, enumConstantKey, keyMap, enumConstantTemplate,
-                                    messageTemplateMethods);
+                    AnnotationInstance messageAnnotation;
+                    if (defaultBundleInterface != null) {
+                        MethodInfo defaultBundleMethod = bundleInterfaceWrapper.method(method.name(),
+                                method.parameterTypes().toArray(new Type[] {}));
+                        if (defaultBundleMethod == null) {
+                            throw new MessageBundleException(
+                                    String.format("Default bundle method not found on %s: %s", bundleInterface, method));
                         }
-                        generatedMessageTemplate.append("{/when}");
-                        messageTemplate = generatedMessageTemplate.toString();
-                        generatedTemplate = true;
+                        messageAnnotation = defaultBundleMethod.annotation(Names.MESSAGE);
+                    } else {
+                        messageAnnotation = method.annotation(Names.MESSAGE);
                     }
-                }
-            }
 
-            if (messageTemplate == null) {
-                throw new MessageBundleException(
-                        String.format("Message template for key [%s] is missing for default locale [%s]", key,
-                                bundle.getDefaultLocale()));
-            }
-
-            String templateId = null;
-            if (messageTemplate.contains("}")) {
-                // Qute is needed - at least one expression/section found
-                if (defaultBundleInterface != null) {
-                    if (locale == null) {
-                        AnnotationInstance localizedAnnotation = bundleInterface.declaredAnnotation(Names.LOCALIZED);
-                        locale = localizedAnnotation.value().asString();
+                    if (messageAnnotation == null) {
+                        LOG.debugf("@Message not declared on %s#%s - using the default key/value", bundleInterface, method);
+                        messageAnnotation = AnnotationInstance.builder(Names.MESSAGE).value(Message.DEFAULT_VALUE)
+                                .add("name", Message.DEFAULT_NAME).build();
                     }
-                    templateId = bundleName + "_" + locale + "_" + key;
-                } else {
-                    templateId = bundleName + "_" + key;
-                }
-            }
 
-            MessageBundleMethodBuildItem messageBundleMethod = new MessageBundleMethodBuildItem(bundleName, key, templateId,
-                    method, messageTemplate, defaultBundleInterface == null, generatedTemplate);
-            messageTemplateMethods
-                    .produce(messageBundleMethod);
-
-            if (!messageBundleMethod.isValidatable()) {
-                // No expression/tag - no need to use qute
-                bundleMethod.returnValue(bundleMethod.load(messageTemplate));
-            } else {
-                // Obtain the template, e.g. msg_hello_name
-                ResultHandle template = bundleMethod.invokeStaticMethod(
-                        io.quarkus.qute.deployment.Descriptors.BUNDLES_GET_TEMPLATE,
-                        bundleMethod.load(templateId));
-                // Create a template instance
-                ResultHandle templateInstance = bundleMethod
-                        .invokeInterfaceMethod(io.quarkus.qute.deployment.Descriptors.TEMPLATE_INSTANCE, template);
-                if (locale != null) {
-                    bundleMethod.invokeInterfaceMethod(
-                            MethodDescriptor.ofMethod(TemplateInstance.class, "setLocale", TemplateInstance.class,
-                                    String.class),
-                            templateInstance, bundleMethod.load(locale));
-                }
-                List<Type> paramTypes = method.parameterTypes();
-                if (!paramTypes.isEmpty()) {
-                    // Set data
-                    int i = 0;
-                    Iterator<Type> it = paramTypes.iterator();
-                    while (it.hasNext()) {
-                        String name = getParameterName(method, i);
-                        bundleMethod.invokeInterfaceMethod(io.quarkus.qute.deployment.Descriptors.TEMPLATE_INSTANCE_DATA,
-                                templateInstance,
-                                bundleMethod.load(name), bundleMethod.getMethodParam(i));
-                        i++;
-                        it.next();
+                    String key = getKey(method, messageAnnotation, defaultKeyValue);
+                    if (key.equals(MESSAGE)) {
+                        throw new MessageBundleException(String.format(
+                                "A message bundle interface method must not use the key 'message' which is reserved for dynamic lookup; defined for %s#%s()",
+                                bundleInterface, method.name()));
                     }
-                }
-                // Render the template
-                // At this point it's already validated that the method returns String
-                bundleMethod.returnValue(bundleMethod.invokeInterfaceMethod(
-                        io.quarkus.qute.deployment.Descriptors.TEMPLATE_INSTANCE_RENDER, templateInstance));
+                    if (keyMap.containsKey(key)) {
+                        throw new MessageBundleException(String.format("Duplicate key [%s] found on %s", key, bundleInterface));
+                    }
+                    keyMap.put(key, new SimpleMessageMethod(method));
+
+                    boolean generatedTemplate = false;
+                    String messageTemplate = messageTemplates.get(method.name());
+                    if (messageTemplate == null) {
+                        messageTemplate = getMessageAnnotationValue(messageAnnotation, true);
+                    }
+
+                    if (messageTemplate == null && defaultBundleInterface != null) {
+                        // method is annotated with @Message without value() -> fallback to default locale
+                        messageTemplate = getMessageAnnotationValue((defaultBundleInterface.method(method.name(),
+                                method.parameterTypes().toArray(new Type[] {}))).annotation(Names.MESSAGE), true);
+                    }
+
+                    // We need some special handling for enum message bundle methods
+                    // A message bundle method that accepts an enum and has no message template receives a generated template:
+                    // {#when enumParamName}
+                    //   {#is CONSTANT_1}{msg:myEnum_$CONSTANT_1}
+                    //   {#is CONSTANT_2}{msg:myEnum_$CONSTANT_2}
+                    //   ...
+                    // {/when}
+                    // Furthermore, a special message method is generated for each enum constant
+                    // These methods are used to handle the {msg:myEnum$CONSTANT_1} and {msg:myEnum$CONSTANT_2}
+                    if (messageTemplate == null && method.parametersCount() == 1) {
+                        Type paramType = method.parameterType(0);
+                        if (paramType.kind() == org.jboss.jandex.Type.Kind.CLASS) {
+                            ClassInfo maybeEnum = index.getClassByName(paramType.name());
+                            if (maybeEnum != null && maybeEnum.isEnum()) {
+                                StringBuilder generatedMessageTemplate = new StringBuilder("{#when ")
+                                        .append(getParameterName(method, 0))
+                                        .append("}");
+                                Set<String> enumConstants = maybeEnum.fields().stream().filter(FieldInfo::isEnumConstant)
+                                        .map(FieldInfo::name).collect(Collectors.toSet());
+                                String separator = enumConstantSeparator(enumConstants);
+                                for (String enumConstant : enumConstants) {
+                                    // myEnum_CONSTANT
+                                    // myEnum_$CONSTANT_1
+                                    // myEnum_$CONSTANT$NEXT
+                                    String enumConstantKey = toEnumConstantKey(method.name(), separator, enumConstant);
+                                    String enumConstantTemplate = messageTemplates.get(enumConstantKey);
+                                    if (enumConstantTemplate == null) {
+                                        throw new TemplateException(
+                                                String.format("Enum constant message not found in bundle [%s] for key: %s",
+                                                        bundleName + (locale != null ? "_" + locale : ""), enumConstantKey));
+                                    }
+                                    generatedMessageTemplate.append("{#is ")
+                                            .append(enumConstant)
+                                            .append("}{")
+                                            .append(bundle.getName())
+                                            .append(":")
+                                            .append(enumConstantKey)
+                                            .append("}");
+                                    // For each constant we generate a method:
+                                    // myEnum_CONSTANT(MyEnum val)
+                                    // myEnum_$CONSTANT_1(MyEnum val)
+                                    // myEnum_$CONSTANT$NEXT(MyEnum val)
+                                    generateEnumConstantMessageMethod(cc, bundleName, locale, bundleInterface,
+                                            defaultBundleInterface, enumConstantKey, keyMap, enumConstantTemplate,
+                                            messageTemplateMethods);
+                                }
+                                generatedMessageTemplate.append("{/when}");
+                                messageTemplate = generatedMessageTemplate.toString();
+                                generatedTemplate = true;
+                            }
+                        }
+                    }
+
+                    if (messageTemplate == null) {
+                        throw new MessageBundleException(
+                                String.format("Message template for key [%s] is missing for default locale [%s]", key,
+                                        bundle.getDefaultLocale()));
+                    }
+
+                    String templateId = null;
+                    String defaultLocale = locale;
+                    if (messageTemplate.contains("}")) {
+                        // Qute is needed - at least one expression/section found
+                        if (defaultBundleInterface != null) {
+                            if (defaultLocale == null) {
+                                AnnotationInstance localizedAnnotation = bundleInterface.declaredAnnotation(Names.LOCALIZED);
+                                defaultLocale = localizedAnnotation.value().asString();
+                            }
+                            templateId = bundleName + "_" + defaultLocale + "_" + key;
+                        } else {
+                            templateId = bundleName + "_" + key;
+                        }
+                    }
+
+                    MessageBundleMethodBuildItem messageBundleMethod = new MessageBundleMethodBuildItem(bundleName, key,
+                            templateId,
+                            method, messageTemplate, defaultBundleInterface == null, generatedTemplate);
+                    messageTemplateMethods
+                            .produce(messageBundleMethod);
+
+                    String effectiveMessageTemplate = messageTemplate;
+                    String effectiveTemplateId = templateId;
+                    String effectiveLocale = defaultLocale;
+                    mc.body(bc -> {
+                        if (!messageBundleMethod.isValidatable()) {
+                            // No expression/tag - no need to use qute
+                            bc.return_(Const.of(effectiveMessageTemplate));
+                        } else {
+                            // Obtain the template, e.g. msg_hello_name
+                            LocalVar template = bc.localVar("template", bc.invokeStatic(
+                                    io.quarkus.qute.deployment.Descriptors.BUNDLES_GET_TEMPLATE,
+                                    Const.of(effectiveTemplateId)));
+                            // Create a template instance
+                            LocalVar templateInstance = bc.localVar("templateInstance", bc
+                                    .invokeInterface(io.quarkus.qute.deployment.Descriptors.TEMPLATE_INSTANCE, template));
+                            if (effectiveLocale != null) {
+                                bc.invokeInterface(
+                                        MethodDesc.of(TemplateInstance.class, "setLocale", TemplateInstance.class,
+                                                String.class),
+                                        templateInstance, Const.of(effectiveLocale));
+                            }
+                            List<Type> paramTypes = method.parameterTypes();
+                            if (!paramTypes.isEmpty()) {
+                                // Set data
+                                int i = 0;
+                                Iterator<Type> it = paramTypes.iterator();
+                                while (it.hasNext()) {
+                                    String name = getParameterName(method, i);
+                                    bc.invokeInterface(io.quarkus.qute.deployment.Descriptors.TEMPLATE_INSTANCE_DATA,
+                                            templateInstance,
+                                            Const.of(name), params.get(i));
+                                    i++;
+                                    it.next();
+                                }
+                            }
+                            // Render the template
+                            // At this point it's already validated that the method returns String
+                            bc.return_(bc.invokeInterface(
+                                    io.quarkus.qute.deployment.Descriptors.TEMPLATE_INSTANCE_RENDER, templateInstance));
+                        }
+                    });
+                });
             }
-        }
-
-        implementResolve(defaultBundleImpl, bundleCreator, keyMap);
-
-        bundleCreator.close();
-        return generatedName.replace('/', '.');
+            implementResolve(defaultBundleImpl, cc, keyMap, resolveMethodPrefix, generatedClassName);
+        });
+        return generatedClassName;
     }
 
     private String enumConstantSeparator(Set<String> enumConstants) {
@@ -1183,33 +1184,36 @@ public class MessageBundleProcessor {
                 templateId, null, messageTemplate, defaultBundleInterface == null, true);
         messageTemplateMethods.produce(messageBundleMethod);
 
-        MethodCreator enumConstantMethod = bundleCreator.getMethodCreator(enumConstantKey,
-                String.class);
+        String effectiveTemplateId = templateId;
+        String effectiveLocale = locale;
+        bundleCreator.method(enumConstantKey, mc -> {
+            mc.returning(String.class);
+            mc.body(bc -> {
+                if (!messageBundleMethod.isValidatable()) {
+                    // No expression/tag - no need to use qute
+                    bc.return_(Const.of(messageTemplate));
+                } else {
+                    // Obtain the template, e.g. msg_myEnum$CONSTANT_1
+                    LocalVar template = bc.localVar("template", bc.invokeStatic(
+                            io.quarkus.qute.deployment.Descriptors.BUNDLES_GET_TEMPLATE,
+                            Const.of(effectiveTemplateId)));
+                    // Create a template instance
+                    LocalVar templateInstance = bc.localVar("templateInstance",
+                            bc.invokeInterface(io.quarkus.qute.deployment.Descriptors.TEMPLATE_INSTANCE, template));
+                    if (effectiveLocale != null) {
+                        bc.invokeInterface(
+                                MethodDesc.of(TemplateInstance.class, "setLocale", TemplateInstance.class,
+                                        String.class),
+                                templateInstance, Const.of(effectiveLocale));
+                    }
+                    // Render the template
+                    bc.return_(bc.invokeInterface(
+                            io.quarkus.qute.deployment.Descriptors.TEMPLATE_INSTANCE_RENDER, templateInstance));
+                }
+            });
+            keyMap.put(enumConstantKey, new EnumConstantMessageMethod(mc.desc()));
+        });
 
-        if (!messageBundleMethod.isValidatable()) {
-            // No expression/tag - no need to use qute
-            enumConstantMethod.returnValue(enumConstantMethod.load(messageTemplate));
-        } else {
-            // Obtain the template, e.g. msg_myEnum$CONSTANT_1
-            ResultHandle template = enumConstantMethod.invokeStaticMethod(
-                    io.quarkus.qute.deployment.Descriptors.BUNDLES_GET_TEMPLATE,
-                    enumConstantMethod.load(templateId));
-            // Create a template instance
-            ResultHandle templateInstance = enumConstantMethod
-                    .invokeInterfaceMethod(io.quarkus.qute.deployment.Descriptors.TEMPLATE_INSTANCE, template);
-            if (locale != null) {
-                enumConstantMethod.invokeInterfaceMethod(
-                        MethodDescriptor.ofMethod(TemplateInstance.class, "setLocale", TemplateInstance.class,
-                                String.class),
-                        templateInstance, enumConstantMethod.load(locale));
-            }
-            // Render the template
-            enumConstantMethod.returnValue(enumConstantMethod.invokeInterfaceMethod(
-                    io.quarkus.qute.deployment.Descriptors.TEMPLATE_INSTANCE_RENDER, templateInstance));
-        }
-
-        keyMap.put(enumConstantKey,
-                new EnumConstantMessageMethod(enumConstantMethod.getMethodDescriptor()));
     }
 
     /**
@@ -1253,186 +1257,218 @@ public class MessageBundleProcessor {
         return name;
     }
 
-    private void implementResolve(String defaultBundleImpl, ClassCreator bundleCreator, Map<String, MessageMethod> keyMap) {
-        MethodCreator resolve = bundleCreator.getMethodCreator("resolve", CompletionStage.class, EvalContext.class);
-        String resolveMethodPrefix = bundleCreator.getClassName().contains("/")
-                ? bundleCreator.getClassName().substring(bundleCreator.getClassName().lastIndexOf('/') + 1)
-                : bundleCreator.getClassName();
+    private void implementResolve(String defaultBundleImpl, ClassCreator bundleCreator, Map<String, MessageMethod> keyMap,
+            String resolveMethodPrefix, String generatedClassName) {
 
-        ResultHandle evalContext = resolve.getMethodParam(0);
-        ResultHandle name = resolve.invokeInterfaceMethod(Descriptors.GET_NAME, evalContext);
-        ResultHandle ret = resolve.newInstance(MethodDescriptor.ofConstructor(CompletableFuture.class));
-
-        // First handle dynamic messages, i.e. the "message" virtual method
-        BytecodeCreator dynamicMessage = resolve.ifTrue(Gizmo.equals(resolve, resolve.load(MESSAGE), name))
-                .trueBranch();
-        ResultHandle evaluatedMessageKey = dynamicMessage.invokeStaticMethod(Descriptors.EVALUATED_PARAMS_EVALUATE_MESSAGE_KEY,
-                evalContext);
-        ResultHandle paramsReady = dynamicMessage.readInstanceField(Descriptors.EVALUATED_PARAMS_STAGE,
-                evaluatedMessageKey);
-
-        // Define function called when the message key is ready
-        FunctionCreator whenCompleteFun = dynamicMessage.createFunction(BiConsumer.class);
-        dynamicMessage.invokeInterfaceMethod(Descriptors.CF_WHEN_COMPLETE, paramsReady, whenCompleteFun.getInstance());
-        BytecodeCreator whenComplete = whenCompleteFun.getBytecode();
-        AssignableResultHandle whenThis = whenComplete
-                .createVariable(DescriptorUtils.extToInt(bundleCreator.getClassName()));
-        whenComplete.assign(whenThis, dynamicMessage.getThis());
-        AssignableResultHandle whenRet = whenComplete.createVariable(CompletableFuture.class);
-        whenComplete.assign(whenRet, ret);
-        AssignableResultHandle whenEvalContext = whenComplete.createVariable(EvalContext.class);
-        whenComplete.assign(whenEvalContext, evalContext);
-        BranchResult throwableIsNull = whenComplete.ifNull(whenComplete.getMethodParam(1));
-        BytecodeCreator success = throwableIsNull.trueBranch();
-
-        // Return if the name is null or NOT_FOUND
-        ResultHandle resultNotFound = success.invokeStaticMethod(Descriptors.NOT_FOUND_FROM_EC, whenEvalContext);
-        BytecodeCreator nameIsNull = success.ifNull(whenComplete.getMethodParam(0)).trueBranch();
-        nameIsNull.invokeVirtualMethod(Descriptors.COMPLETABLE_FUTURE_COMPLETE, whenRet,
-                resultNotFound);
-        nameIsNull.returnValue(null);
-        BytecodeCreator nameNotFound = success.ifTrue(Gizmo.equals(success, whenComplete.getMethodParam(0), resultNotFound))
-                .trueBranch();
-        nameNotFound.invokeVirtualMethod(Descriptors.COMPLETABLE_FUTURE_COMPLETE, whenRet, resultNotFound);
-        nameNotFound.returnValue(null);
-
-        // Evaluate the rest of the params
-        ResultHandle evaluatedMessageParams = success.invokeStaticMethod(
-                Descriptors.EVALUATED_PARAMS_EVALUATE_MESSAGE_PARAMS,
-                whenEvalContext);
-        // Delegate to BundleClassName_resolve_0 (the first group of messages)
-        ResultHandle res0Ret = success.invokeVirtualMethod(
-                MethodDescriptor.ofMethod(bundleCreator.getClassName(), resolveMethodPrefix + "_resolve_0",
-                        CompletableFuture.class, String.class,
-                        EvaluatedParams.class, CompletableFuture.class),
-                whenThis, whenComplete.getMethodParam(0), evaluatedMessageParams, whenRet);
-        BytecodeCreator ret0Null = success.ifNull(res0Ret).trueBranch();
-        ret0Null.invokeVirtualMethod(Descriptors.COMPLETABLE_FUTURE_COMPLETE, whenRet,
-                resultNotFound);
-        BytecodeCreator failure = throwableIsNull.falseBranch();
-        failure.invokeVirtualMethod(Descriptors.COMPLETABLE_FUTURE_COMPLETE_EXCEPTIONALLY, whenRet,
-                whenComplete.getMethodParam(1));
-        whenComplete.returnValue(null);
-        // Return from the resolve method
-        dynamicMessage.returnValue(ret);
-
-        // Proceed with generated messages
         // We do group messages to workaround limits of a JVM method body
-        ResultHandle evaluatedParams = resolve.invokeStaticMethod(Descriptors.EVALUATED_PARAMS_EVALUATE, evalContext);
-        final int groupLimit = 300;
+        int groupLimit = 300;
         int groupIndex = 0;
-        int resolveIndex = 0;
-        MethodCreator resolveGroup = null;
-
+        List<List<Entry<String, MessageMethod>>> resolveGroups = new ArrayList<>();
+        List<Entry<String, MessageMethod>> resolveGroup = new ArrayList<>();
         for (Entry<String, MessageMethod> entry : keyMap.entrySet()) {
-            if (resolveGroup == null || groupIndex++ >= groupLimit) {
+            if (groupIndex++ >= groupLimit) {
                 groupIndex = 0;
-                String resolveMethodName = resolveMethodPrefix + "_resolve_" + resolveIndex++;
-                if (resolveGroup != null) {
-                    // Delegate to the next "resolve_x" method
-                    resolveGroup.returnValue(resolveGroup.invokeVirtualMethod(
-                            MethodDescriptor.ofMethod(bundleCreator.getClassName(), resolveMethodName, CompletableFuture.class,
-                                    String.class,
-                                    EvaluatedParams.class, CompletableFuture.class),
-                            resolveGroup.getThis(), resolveGroup.getMethodParam(0), resolveGroup.getMethodParam(1),
-                            resolveGroup.getMethodParam(2)));
-                }
-                resolveGroup = bundleCreator.getMethodCreator(resolveMethodName, CompletableFuture.class, String.class,
-                        EvaluatedParams.class, CompletableFuture.class).setModifiers(0);
-                if (resolveIndex == 1) {
-                    ResultHandle resRet = resolve.invokeVirtualMethod(
-                            MethodDescriptor.ofMethod(bundleCreator.getClassName(), resolveMethodName, CompletableFuture.class,
-                                    String.class, EvaluatedParams.class, CompletableFuture.class),
-                            resolve.getThis(), name, evaluatedParams, ret);
-                    resolve.ifNotNull(resRet).trueBranch().returnValue(resRet);
-                }
+                resolveGroups.add(resolveGroup);
+                resolveGroup = new ArrayList<>();
+            } else {
+                resolveGroup.add(entry);
             }
-            addMessageMethod(resolveGroup, entry.getKey(), entry.getValue(), resolveGroup.getMethodParam(0),
-                    resolveGroup.getMethodParam(1), resolveGroup.getMethodParam(2), bundleCreator.getClassName());
+        }
+        if (!resolveGroup.isEmpty()) {
+            // Add the last group
+            resolveGroups.add(resolveGroup);
+        }
+        for (ListIterator<List<Entry<String, MessageMethod>>> it = resolveGroups.listIterator(); it.hasNext();) {
+            int idx = it.nextIndex();
+            List<Entry<String, MessageMethod>> group = it.next();
+            String resolveMethodName = resolveMethodPrefix + "_resolve_" + idx;
+
+            bundleCreator.method(resolveMethodName, mc -> {
+                mc.returning(CompletableFuture.class);
+                ParamVar name = mc.parameter("name", String.class);
+                ParamVar evaluatedParams = mc.parameter("evaluatedParams", EvaluatedParams.class);
+                ParamVar ret = mc.parameter("ret", CompletableFuture.class);
+
+                mc.body(bc -> {
+                    LocalVar this_ = bc.localVar("this_", bundleCreator.this_());
+                    for (Entry<String, MessageMethod> entry : group) {
+                        addMessageMethod(bundleCreator, bc, entry.getKey(), entry.getValue(), name, evaluatedParams,
+                                ret, this_);
+                    }
+                    if (it.hasNext()) {
+                        // Delegate to the next "resolve_x" method
+                        bc.return_(bc.invokeVirtual(ClassMethodDesc.of(ClassDesc.of(generatedClassName),
+                                resolveMethodPrefix + "_resolve_" + (idx + 1),
+                                CompletableFuture.class, String.class,
+                                EvaluatedParams.class, CompletableFuture.class),
+                                bundleCreator.this_(), name, evaluatedParams, bundleCreator.this_()));
+                    } else {
+                        // Last group - return null
+                        bc.returnNull();
+                    }
+                });
+            });
         }
 
-        if (resolveGroup != null) {
-            // Last group - return null
-            resolveGroup.returnValue(resolveGroup.loadNull());
-        }
+        bundleCreator.method("resolve", mc -> {
+            mc.returning(CompletionStage.class);
+            ParamVar evalContext = mc.parameter("ec", EvalContext.class);
 
-        if (defaultBundleImpl != null) {
-            resolve.returnValue(resolve.invokeSpecialMethod(
-                    MethodDescriptor.ofMethod(defaultBundleImpl, "resolve", CompletionStage.class, EvalContext.class),
-                    resolve.getThis(), evalContext));
-        } else {
-            resolve.returnValue(resolve.invokeStaticMethod(Descriptors.RESULTS_NOT_FOUND_EC, evalContext));
-        }
+            mc.body(bc -> {
+                LocalVar name = bc.localVar("name", bc.invokeInterface(Descriptors.GET_NAME, evalContext));
+                LocalVar ret = bc.localVar("ret", bc.new_(CompletableFuture.class));
+
+                // First handle dynamic messages, i.e. the "message" virtual method
+                bc.if_(bc.objEquals(name, Const.of(MESSAGE)), dynamicMessage -> {
+                    Expr evaluatedMessageKey = dynamicMessage.invokeStatic(Descriptors.EVALUATED_PARAMS_EVALUATE_MESSAGE_KEY,
+                            evalContext);
+                    Expr paramsReady = evaluatedMessageKey.field(Descriptors.EVALUATED_PARAMS_STAGE);
+
+                    // Define function called when the message key is ready
+                    Expr fun = dynamicMessage.lambda(BiConsumer.class, lc -> {
+                        Var capturedRet = lc.capture(ret);
+                        Var capturedEvalContext = lc.capture(evalContext);
+                        Var capturedThis = lc.capture("this_", bundleCreator.this_());
+                        ParamVar result = lc.parameter("r", 0);
+                        ParamVar throwable = lc.parameter("t", 1);
+
+                        lc.body(whenComplete -> {
+                            whenComplete.ifElse(whenComplete.isNull(throwable),
+                                    success -> {
+
+                                        // Return if the name is null or NOT_FOUND
+                                        success.ifNull(result, isNull -> {
+                                            isNull.invokeVirtual(Descriptors.COMPLETABLE_FUTURE_COMPLETE, capturedRet,
+                                                    isNull.invokeStatic(Descriptors.NOT_FOUND_FROM_EC, capturedEvalContext));
+                                            isNull.return_();
+                                        });
+                                        success.if_(success.invokeStatic(Descriptors.RESULTS_IS_NOT_FOUND, result),
+                                                isNotFound -> {
+                                                    isNotFound.invokeVirtual(Descriptors.COMPLETABLE_FUTURE_COMPLETE,
+                                                            capturedRet, result);
+                                                    isNotFound.return_();
+                                                });
+
+                                        // Evaluate the rest of the params
+                                        LocalVar evaluatedMessageParams = success.localVar("emp", success.invokeStatic(
+                                                Descriptors.EVALUATED_PARAMS_EVALUATE_MESSAGE_PARAMS,
+                                                capturedEvalContext));
+                                        // Delegate to BundleClassName_resolve_0 (the first group of messages)
+                                        Expr res0Ret = success.invokeVirtual(
+                                                ClassMethodDesc.of(ClassDesc.of(generatedClassName),
+                                                        resolveMethodPrefix + "_resolve_0",
+                                                        CompletableFuture.class, String.class,
+                                                        EvaluatedParams.class, CompletableFuture.class),
+                                                capturedThis, result, evaluatedMessageParams, capturedRet);
+
+                                        success.ifNull(res0Ret, resultIsNull -> {
+                                            resultIsNull.invokeVirtual(Descriptors.COMPLETABLE_FUTURE_COMPLETE, capturedRet,
+                                                    resultIsNull.invokeStatic(Descriptors.NOT_FOUND_FROM_EC,
+                                                            capturedEvalContext));
+                                        });
+
+                                        success.return_();
+
+                                    }, failure -> {
+                                        failure.invokeVirtual(Descriptors.COMPLETABLE_FUTURE_COMPLETE_EXCEPTIONALLY,
+                                                capturedRet,
+                                                throwable);
+                                        failure.return_();
+                                    });
+                        });
+                    });
+                    dynamicMessage.invokeInterface(Descriptors.CF_WHEN_COMPLETE, paramsReady, fun);
+                    dynamicMessage.return_(ret);
+                });
+
+                Expr evaluatedParams = bc.invokeStatic(Descriptors.EVALUATED_PARAMS_EVALUATE, evalContext);
+                LocalVar ret0 = bc.localVar("ret0", bc.invokeVirtual(
+                        ClassMethodDesc.of(ClassDesc.of(generatedClassName),
+                                resolveMethodPrefix + "_resolve_0",
+                                CompletableFuture.class, String.class,
+                                EvaluatedParams.class, CompletableFuture.class),
+                        bundleCreator.this_(), name, evaluatedParams, ret));
+                bc.ifNotNull(ret0, retNotNull -> retNotNull.return_(ret0));
+
+                // Proceed with generated messages
+                if (defaultBundleImpl != null) {
+                    bc.return_(bc.invokeSpecial(
+                            ClassMethodDesc.of(ClassDesc.of(defaultBundleImpl), "resolve", CompletionStage.class,
+                                    EvalContext.class),
+                            bundleCreator.this_(), evalContext));
+                } else {
+                    bc.return_(bc.invokeStatic(Descriptors.RESULTS_NOT_FOUND_EC, evalContext));
+                }
+            });
+        });
+
     }
 
-    private void addMessageMethod(MethodCreator resolve, String key, MessageMethod method, ResultHandle name,
-            ResultHandle evaluatedParams,
-            ResultHandle ret, String bundleClass) {
+    private void addMessageMethod(ClassCreator cc, BlockCreator resolve, String key, MessageMethod method, Var name,
+            Var evaluatedParams, Var ret, Var this_) {
         List<Type> methodParams = method.parameterTypes();
 
-        BytecodeCreator matched = resolve.ifTrue(Gizmo.equals(resolve, resolve.load(key), name))
-                .trueBranch();
-        if (methodParams.isEmpty()) {
-            matched.invokeVirtualMethod(Descriptors.COMPLETABLE_FUTURE_COMPLETE, ret,
-                    method.isMessageBundleInterfaceMethod()
-                            ? matched.invokeInterfaceMethod(method.descriptor(), matched.getThis())
-                            : matched.invokeVirtualMethod(method.descriptor(), matched.getThis()));
-            matched.returnValue(ret);
-        } else {
-            // The CompletionStage upon which we invoke whenComplete()
-            ResultHandle paramsReady = matched.readInstanceField(Descriptors.EVALUATED_PARAMS_STAGE,
-                    evaluatedParams);
-
-            FunctionCreator whenCompleteFun = matched.createFunction(BiConsumer.class);
-            matched.invokeInterfaceMethod(Descriptors.CF_WHEN_COMPLETE, paramsReady, whenCompleteFun.getInstance());
-
-            BytecodeCreator whenComplete = whenCompleteFun.getBytecode();
-
-            AssignableResultHandle whenThis = whenComplete
-                    .createVariable(DescriptorUtils.extToInt(bundleClass));
-            whenComplete.assign(whenThis, matched.getThis());
-            AssignableResultHandle whenRet = whenComplete.createVariable(CompletableFuture.class);
-            whenComplete.assign(whenRet, ret);
-
-            BranchResult throwableIsNull = whenComplete.ifNull(whenComplete.getMethodParam(1));
-
-            // complete
-            BytecodeCreator success = throwableIsNull.trueBranch();
-
-            ResultHandle[] paramsHandle = new ResultHandle[methodParams.size()];
-            if (methodParams.size() == 1) {
-                paramsHandle[0] = whenComplete.getMethodParam(0);
+        resolve.if_(resolve.objEquals(name, Const.of(key)), matched -> {
+            if (methodParams.isEmpty()) {
+                matched.invokeVirtual(Descriptors.COMPLETABLE_FUTURE_COMPLETE, ret,
+                        method.isMessageBundleInterfaceMethod()
+                                ? matched.invokeInterface(method.descriptor(), this_)
+                                : matched.invokeVirtual(method.descriptor(), this_));
+                matched.return_(ret);
             } else {
-                for (int i = 0; i < methodParams.size(); i++) {
-                    paramsHandle[i] = success.invokeVirtualMethod(Descriptors.EVALUATED_PARAMS_GET_RESULT,
-                            evaluatedParams,
-                            success.load(i));
-                }
+                // The CompletionStage upon which we invoke whenComplete()
+                Expr paramsReady = evaluatedParams.field(Descriptors.EVALUATED_PARAMS_STAGE);
+
+                Expr fun = matched.lambda(BiConsumer.class, lc -> {
+                    Var capturedRet = lc.capture(ret);
+                    Var capturedThis = lc.capture(this_);
+                    Var capturedEvaluatedParams = lc.capture(evaluatedParams);
+                    ParamVar result = lc.parameter("r", 0);
+                    ParamVar throwable = lc.parameter("t", 1);
+
+                    lc.body(whenComplete -> {
+                        whenComplete.ifElse(whenComplete.isNull(throwable),
+                                success -> {
+
+                                    Var[] args = new Var[methodParams.size()];
+                                    if (methodParams.size() == 1) {
+                                        args[0] = result;
+                                    } else {
+                                        for (int i = 0; i < methodParams.size(); i++) {
+                                            args[i] = success.localVar("arg" + i,
+                                                    success.invokeVirtual(Descriptors.EVALUATED_PARAMS_GET_RESULT,
+                                                            capturedEvaluatedParams,
+                                                            Const.of(i)));
+                                        }
+                                    }
+                                    success.try_(tc -> {
+                                        tc.body(tryBlock -> {
+                                            tryBlock.invokeVirtual(Descriptors.COMPLETABLE_FUTURE_COMPLETE, capturedRet,
+                                                    method.isMessageBundleInterfaceMethod()
+                                                            ? tryBlock.invokeInterface(method.descriptor(), capturedThis,
+                                                                    args)
+                                                            : tryBlock.invokeVirtual(method.descriptor(), capturedThis,
+                                                                    args));
+                                        });
+                                        tc.catch_(Throwable.class, "t", (cbc, t) -> {
+                                            cbc.invokeVirtual(Descriptors.COMPLETABLE_FUTURE_COMPLETE_EXCEPTIONALLY,
+                                                    capturedRet,
+                                                    t);
+                                        });
+                                    });
+
+                                }, failure -> {
+                                    failure.invokeVirtual(Descriptors.COMPLETABLE_FUTURE_COMPLETE_EXCEPTIONALLY, capturedRet,
+                                            throwable);
+                                });
+                        whenComplete.return_();
+                    });
+
+                });
+                matched.invokeInterface(Descriptors.CF_WHEN_COMPLETE, paramsReady, fun);
+                matched.return_(ret);
             }
-
-            AssignableResultHandle invokeRet = success.createVariable(Object.class);
-            // try
-            TryBlock tryCatch = success.tryBlock();
-            // catch (Throwable e)
-            CatchBlockCreator exception = tryCatch.addCatch(Throwable.class);
-            // CompletableFuture.completeExceptionally(Throwable)
-            exception.invokeVirtualMethod(Descriptors.COMPLETABLE_FUTURE_COMPLETE_EXCEPTIONALLY, whenRet,
-                    exception.getCaughtException());
-
-            tryCatch.assign(invokeRet,
-                    method.isMessageBundleInterfaceMethod()
-                            ? tryCatch.invokeInterfaceMethod(method.descriptor(), whenThis, paramsHandle)
-                            : tryCatch.invokeVirtualMethod(method.descriptor(), whenThis, paramsHandle));
-
-            tryCatch.invokeVirtualMethod(Descriptors.COMPLETABLE_FUTURE_COMPLETE, whenRet, invokeRet);
-            // CompletableFuture.completeExceptionally(Throwable)
-            BytecodeCreator failure = throwableIsNull.falseBranch();
-            failure.invokeVirtualMethod(Descriptors.COMPLETABLE_FUTURE_COMPLETE_EXCEPTIONALLY, whenRet,
-                    whenComplete.getMethodParam(1));
-            whenComplete.returnValue(null);
-
-            matched.returnValue(ret);
-        }
+        });
     }
 
     private String getKey(MethodInfo method, AnnotationInstance messageAnnotation, AnnotationValue defaultKeyValue) {
@@ -1473,66 +1509,136 @@ public class MessageBundleProcessor {
         return defaultLocale;
     }
 
-    private List<Path> findMessageFiles(ApplicationArchivesBuildItem applicationArchivesBuildItem,
+    record MessageFile(Path path, String fileName, int priority) implements Comparable<MessageFile> {
+
+        MessageFile(Path path, int priority) {
+            this(path, path.getFileName().toString(), priority);
+        }
+
+        boolean matchesBundle(String bundleName) {
+            String fileName = this.fileName;
+            int fileSeparatorIdx = fileName.indexOf('.');
+            // Remove file extension if exists
+            if (fileSeparatorIdx > -1) {
+                fileName = fileName.substring(0, fileSeparatorIdx);
+            }
+            // Split the filename and the bundle name by underscores
+            String[] fileNameParts = fileName.split("_");
+            String[] nameParts = bundleName.split("_");
+
+            if (fileNameParts.length < nameParts.length) {
+                return false;
+            }
+
+            // Compare each part of the filename with the corresponding part of the bundle name
+            for (int i = 0; i < nameParts.length; i++) {
+                if (!fileNameParts[i].equals(nameParts[i])) {
+                    return false;
+                }
+            }
+            return true;
+        }
+
+        String getLocale(String bundleName) {
+            String fileName = this.fileName;
+            int postfixIdx = fileName.indexOf('.');
+            if (postfixIdx == bundleName.length()) {
+                // msg.txt -> use bundle default locale
+                return null;
+            } else {
+                return fileName
+                        // msg_en.txt -> en
+                        // msg_Views_Index_cs.properties -> cs
+                        // msg_Views_Index_cs-CZ.properties -> cs-CZ
+                        // msg_Views_Index_cs_CZ.properties -> cs_CZ
+                        .substring(bundleName.length() + 1, postfixIdx)
+                        // Support resource bundle naming convention
+                        .replace('_', '-');
+            }
+        }
+
+        @Override
+        public int compareTo(MessageFile other) {
+            // Higher priority goes first
+            return Integer.compare(other.priority(), priority());
+        }
+    }
+
+    private void checkForDuplicates(Map<String, List<MessageFile>> groupByName) {
+        // Check for duplicates
+        // If there are multiple message files of the same priority then fail the build
+        for (var entry : groupByName.entrySet()) {
+            if (entry.getValue().size() > 1) {
+                Map<Integer, List<MessageFile>> groupByPriority = entry.getValue().stream()
+                        .collect(Collectors.groupingBy(MessageFile::priority));
+                for (var groupEntry : groupByPriority.entrySet()) {
+                    if (groupEntry.getValue().size() > 1) {
+                        StringBuilder builder = new StringBuilder("Duplicate localized files with priority ")
+                                .append(groupEntry.getValue().get(0).priority())
+                                .append(" found:\n\t- ")
+                                .append(entry.getKey())
+                                .append(": ")
+                                .append(groupEntry.getValue());
+                        throw new MessageBundleException(builder.toString());
+                    }
+                }
+            }
+        }
+    }
+
+    private List<MessageFile> findMessageFiles(ApplicationArchivesBuildItem applicationArchives,
             BuildProducer<HotDeploymentWatchedFileBuildItem> watchedFiles) throws IOException {
 
-        Map<String, List<Path>> messageFileNameToPath = new HashMap<>();
+        List<MessageFile> messageFiles = new ArrayList<>();
 
-        for (ApplicationArchive archive : applicationArchivesBuildItem.getAllApplicationArchives()) {
-            archive.accept(tree -> {
-                final Path messagesPath = tree.getPath(MESSAGES);
-                if (messagesPath == null) {
-                    return;
-                }
-                try (Stream<Path> files = Files.list(messagesPath)) {
-                    Iterator<Path> iter = files.iterator();
-                    while (iter.hasNext()) {
-                        Path filePath = iter.next();
-                        if (Files.isRegularFile(filePath)) {
-                            String messageFileName = messagesPath.relativize(filePath).toString();
-                            if (File.separatorChar != '/') {
-                                messageFileName = messageFileName.replace(File.separatorChar, '/');
-                            }
-                            List<Path> paths = messageFileNameToPath.get(messageFileName);
-                            if (paths == null) {
-                                paths = new ArrayList<>();
-                                messageFileNameToPath.put(messageFileName, paths);
-                            }
-                            paths.add(filePath);
-                        }
-                    }
-                } catch (IOException e) {
-                    throw new UncheckedIOException(e);
-                }
-            });
+        addMessageFiles(applicationArchives.getRootArchive(), 10, messageFiles);
+        for (ApplicationArchive archive : applicationArchives.getApplicationArchives()) {
+            addMessageFiles(archive, 1, messageFiles);
         }
 
-        if (messageFileNameToPath.isEmpty()) {
-            return Collections.emptyList();
+        if (messageFiles.isEmpty()) {
+            return List.of();
         }
 
-        // Check duplicates
-        List<Entry<String, List<Path>>> duplicates = messageFileNameToPath.entrySet().stream()
-                .filter(e -> e.getValue().size() > 1).collect(Collectors.toList());
-        if (!duplicates.isEmpty()) {
-            StringBuilder builder = new StringBuilder("Duplicate localized files found:");
-            for (Entry<String, List<Path>> e : duplicates) {
-                builder.append("\n\t- ")
-                        .append(e.getKey())
-                        .append(": ")
-                        .append(e.getValue());
-            }
-            throw new IllegalStateException(builder.toString());
-        }
+        // Check for duplicates
+        Map<String, List<MessageFile>> groupByName = messageFiles.stream()
+                .collect(Collectors.groupingBy(MessageFile::fileName));
+        checkForDuplicates(groupByName);
+
+        // Sort message files by priority
+        messageFiles.sort(null);
 
         // Hot deployment
-        for (String messageFileName : messageFileNameToPath.keySet()) {
-            watchedFiles.produce(new HotDeploymentWatchedFileBuildItem(MESSAGES + "/" + messageFileName));
+        for (MessageFile messageFile : messageFiles) {
+            watchedFiles.produce(new HotDeploymentWatchedFileBuildItem(MESSAGES + "/" + messageFile.fileName()));
         }
 
-        List<Path> messageFiles = new ArrayList<>();
-        messageFileNameToPath.values().forEach(messageFiles::addAll);
         return messageFiles;
+    }
+
+    private void addMessageFiles(ApplicationArchive archive, int priority,
+            List<MessageFile> messageFiles) {
+        archive.accept(tree -> {
+            final Path messagesPath = tree.getPath(MESSAGES);
+            if (messagesPath == null) {
+                return;
+            }
+            try (Stream<Path> files = Files.list(messagesPath)) {
+                Iterator<Path> iter = files.iterator();
+                while (iter.hasNext()) {
+                    Path filePath = iter.next();
+                    if (Files.isRegularFile(filePath)) {
+                        String messageFileName = messagesPath.relativize(filePath).toString();
+                        if (File.separatorChar != '/') {
+                            messageFileName = messageFileName.replace(File.separatorChar, '/');
+                        }
+                        messageFiles.add(new MessageFile(filePath, priority));
+                    }
+                }
+            } catch (IOException e) {
+                throw new UncheckedIOException(e);
+            }
+        });
     }
 
     private static class AppClassPredicate implements Predicate<String> {
@@ -1651,7 +1757,7 @@ public class MessageBundleProcessor {
 
         List<Type> parameterTypes();
 
-        MethodDescriptor descriptor();
+        MethodDesc descriptor();
 
         default boolean isMessageBundleInterfaceMethod() {
             return true;
@@ -1673,17 +1779,17 @@ public class MessageBundleProcessor {
         }
 
         @Override
-        public MethodDescriptor descriptor() {
-            return MethodDescriptor.of(method);
+        public MethodDesc descriptor() {
+            return methodDescOf(method);
         }
 
     }
 
     static class EnumConstantMessageMethod implements MessageMethod {
 
-        final MethodDescriptor descriptor;
+        final MethodDesc descriptor;
 
-        EnumConstantMessageMethod(MethodDescriptor descriptor) {
+        EnumConstantMessageMethod(MethodDesc descriptor) {
             this.descriptor = descriptor;
         }
 
@@ -1693,7 +1799,7 @@ public class MessageBundleProcessor {
         }
 
         @Override
-        public MethodDescriptor descriptor() {
+        public MethodDesc descriptor() {
             return descriptor;
         }
 
